fixed quantity input area resizing improperly on small window size

--- a/style/st1_pet_shop.css
+++ b/style/st1_pet_shop.css
@@ -56,8 +56,8 @@
 .counter {
     float: left;
     box-sizing: border-box;
-    height: 1.8rem;
-    width: 1.8rem;
+    height: 18px;
+    width: 18px;
     border: 0.1px solid #6e6e6e;
     background: #e3e3e3;
     color: #000000;
@@ -79,8 +79,8 @@
     padding: 0; 
     margin: 0; 
     text-align: center; 
-    width: 1.8rem !important; 
-    height: 1.8rem !important; 
+    width: 18px !important; 
+    height: 18px !important; 
     box-sizing: border-box;
 }
 .add {
